objects/Digital_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <defaultValue>&apos;Not Started&apos;</defaultValue>
        <label>Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Status__c</fullName>
        <label>Data Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data Load</fullName>
                </value>
                <value>
                    <fullName>Digital Auto-Run</fullName>
                </value>
                <value>
                    <fullName>Post-CohortsJob</fullName>
                </value>
                <value>
                    <fullName>Pre-CohortsJob</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Customers__c</fullName>
        <label>Total Customers</label>
        <summaryForeignKey>Digital_Customer__c.Digital_Settings__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Messages__c</fullName>
        <label>Total Messages</label>
        <summaryForeignKey>Digital_Message__c.Digital_Settings__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Digital Validation Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Messages__c</columns>
        <columns>Total_Customers__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Data_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Validation Settings</pluralLabel>
    <recordTypes>
        <fullName>Cohorts</fullName>
        <active>true</active>
        <label>Cohorts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dummy</fullName>
        <active>true</active>
        <label>Dummy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>checkbatchcount</fullName>
        <active>true</active>
        <description>It checks the number of records to be set for running in Digital Cohort execution Job</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Batch_Size__c )), 
OR(
Batch_Size__c &gt; 5,
Batch_Size__c &lt; 1 
  )
)</errorConditionFormula>
        <errorDisplayField>Batch_Size__c</errorDisplayField>
        <errorMessage>Batch Size should be between 1 and 5</errorMessage>
    </validationRules>
</CustomObject>